# SCHEMATIC

./: .gitignore  .gitmodules  README.md  pyproject.toml
conf/: datasets.yaml
data/: README.md
scripts/: 2_score_essentiality.py  3_select_hits.py
scripts/figures/: figure-2.ipynb  figure-3.ipynb  figure-4.ipynb  figure-5.ipynb
scripts/scores/: 1_score_interactions.py
src/decipher/: __init__.py
src/decipher/datasets/: cosmic.py  decipher_data.py  depmap.py  gdsc.py  genesets.py  hierarchy.py  tcga.py
src/decipher/scores/: aggregate.py  bagel.py  cov.py  fitness.py  interactions.py  pipeline.py  utils.py
