[project]
name = "decipher-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "statsmodels>=0.14.1",
    "decipher-final",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "matplotlib>=3.7.5",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decipher"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.7",
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
decipher-final = { workspace = true }
